The history options (line #/enabled) are now used in the profiles.

BUG: 120046

svn path=/branches/KDE/3.5/kdebase/konsole/; revision=498108